<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/insert_medical_report_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertReportActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="Update record"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:background="#FFFFFF"
                app:cardBackgroundColor="#FFFFFF"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/record_date_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Record date" />

                <TextView
                    android:id="@+id/record_date_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:inputType="date" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/record_time_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Record time" />

                <TextView
                    android:id="@+id/record_time_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:inputType="time" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="25dp"
                android:background="#FFFFFF"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/systolic_pressure_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="Systolic Pressure"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/diastolic_pressure_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="Diastolic Pressure"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/heart_rate_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="Heart rate"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/comment_update"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="Comment"
                        android:inputType="text" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/update_the_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="35dp"
                android:layout_marginRight="25dp"
                android:text="Update record" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>