...
                android:layout_gravity="end"
                android:foregroundGravity="right"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/edit_rec_button"
                    android:layout_width="70dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:textSize="9sp"
                    app:icon="@android:drawable/ic_menu_edit"
                    app:iconGravity="start" />

                <Button
                    android:id="@+id/delete_rec_button"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:textSize="9sp"
...
