<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cardiac_report_view"
    tools:context=".DataViewerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
...
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:text="+ Add" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/medical_report_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="560dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

        </androidx.recyclerview.widget.RecyclerView>
...
