<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/registerScreen"
    android:background="@drawable/loginbg1"
    tools:context=".auth.RegisterActivity">


    <EditText
        android:id="@+id/confirmPasswordField"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:background="@drawable/round_back"
        android:drawableLeft="@drawable/securityicon1"
        android:drawablePadding="10sp"
        android:hint="Confirm Password"


        android:inputType="textPassword"

        android:textColor="@color/white"
        android:textColorHint="#ECF2EC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.474" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.671"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="Email"
        android:drawableLeft="@drawable/person_24"
        android:drawablePadding="10sp"
        android:textColorHint="@color/white"

        android:background="@drawable/round_back"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:hint="Password"
        android:textColorHint="#ECF2EC"
        android:drawableLeft="@drawable/securityicon1"
        android:drawablePadding="10sp"


        android:inputType="textPassword"

        android:textColor="@color/white"
        android:background="@drawable/round_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <android.widget.Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_back"
        android:backgroundTint="#0EE018"
        android:text="Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.614" />

    <TextView
        android:id="@+id/redirectRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already Have an Account?"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="109dp"
        android:layout_height="83dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078"
        app:srcCompat="@drawable/appicon3" />


</androidx.constraintlayout.widget.ConstraintLayout>