<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginscreen"
    android:background="@drawable/loginbg1"
    tools:context=".auth.loginactivity1">

    <TextView
        android:id="@+id/textSignIn"
        android:layout_width="wrap_content"
...
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <EditText
        android:id="@+id/signupemail1"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="Email"
        android:drawableLeft="@drawable/person_24"
...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255" />

    <EditText
        android:id="@+id/signuppassword2"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:hint="Password"
        android:textColorHint="#ECF2EC"
        android:drawableLeft="@drawable/securityicon1"
        android:drawablePadding="10sp"
...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <Button
        android:id="@+id/login1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign In"
        android:backgroundTint="#0BE115"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
...
